[tool.poetry]
name = "gluetool"
version = "1.24"
description = "Python framework for constructing command-line pipelines."
authors = [
  "Milos Prchlik <mprchlik@redhat.com>",
  "Miroslav Vadkerti <mvadkert@redhat.com>",
  "Martin Kluson <mkluson@redhat.com>",
  "Ondrej Ptak <optak@redhat.com>"
]
license = "BSD"
readme = "README.rst"
homepage = "https://gluetool.readthedocs.org/"
repository = "https://github.com/gluetool/gluetool"

classifiers = [
  'Development Status :: 5 - Production/Stable',
  'Environment :: Console',
  'Intended Audience :: Developers',
  'Intended Audience :: System Administrators',
  'License :: OSI Approved :: BSD License',
  'Operating System :: POSIX :: Linux',
  'Programming Language :: Python :: 2.7',
  'Programming Language :: Python :: 3.6',
  'Programming Language :: Python :: Implementation :: CPython',
  'Topic :: Software Development :: Libraries :: Application Frameworks',
  'Topic :: Utilities'
]

packages = [
  { include = "gluetool" }
]

include = [
  "assets/html-log/prism.css",
  "assets/html-log/prism.js",
  "assets/html-log/semantic.min.css",
  "assets/html-log/semantic.min.js"
]

[tool.poetry.dependencies]
python = "~2.7 || ~3.6 || ~3.7 || ~3.8"
beautifulsoup4 = "^4.6.3"
colorama = "^0.3.9"
docutils = "^0.14"
enum34 = { version = "^1.1.6", python = "2.7" }
Jinja2 = "^2.10"
lxml = "^4.2.4"
mock = "^3.0.5"
raven = "^6.9.0"
requests = "^2.25.1"
requests-toolbelt = "^0.8.0"
"ruamel.yaml" = "^0.16.12"
six = "^1.12.0"
# Our text coloring depends on Sphinx having some attributes, newer versions changed their internals :/
Sphinx = "~1.5.2"
tabulate = "^0.8.2"
typing = { version = "^3.7.4", python = "2.7" }
typing-extensions = "^3.7.4"
urlnormalizer = "^1.2.0"

# While *mypy* is a tool to check type annotations, *mypy-extensions* is a package that brings extensions
# to the standard typing module - therefore it is not a developer dependency, as it is needed by types
# depending on extended argument annotations.
mypy-extensions = "^0.4.1"

# packaging==17.1',
# pyparsing==2.3.0',
# MarkupSafe==1.1.0'

[tool.poetry.dev-dependencies]
codecov = "^2.0.15"
flake8 = "^3.8.3"
hypothesis = "^4.57.1"
isort = "4.3.21"
# It is good enough to have mypy only with Python 3 - it cannot be run with Python 2 anyway.
mypy = { version = "^0.720", python = "^3.6" }
pylint = [
  { version = "1.9.5", python = "2.7" },
  { version = "2.5.3", python = "^3.6" }
]
pytest-flake8 = "^1.0.6"
pytest-cov = "^2.5.1"
pytest-catchlog = "^1.2.2"
pytest-mock = "^1.6.3"
pytest = [
  { version = "^4.6", python = "2.7" },
  { version = "^5.4.3", python = "^3.6" }
]
sphinx-rtd-theme = "^0.4.1"

# Using asterisk instead of specifying pytest-lint versions for each suported Python version seems to do the trick:
# we limit the list of possible Pylint versions, and we limit the list of possible Pytest versions, and astersik
# apparently gives Poetry the enough space to find pytest-pylint to match both ends.
pytest-pylint = "*"
# pytest-pylint = [
#   { version = "^0.14.1", python = "2.7" },
#   { version = "^0.16.1", python = "^3.6" }
# ]

[tool.poetry.scripts]
gluetool = "gluetool.tool:main"
gluetool-html-log = "gluetool.html_log:main"

[tool.poetry.plugins]

[tool.poetry.plugins."gluetool.modules"]
".bash_completion" = "gluetool.modules.bash_completion:BashCompletion"
".dep_list" = "gluetool.modules.dep_list:DepList"
".yaml_pipeline" = "gluetool.modules.yaml_pipeline:YAMLPipeline"

[build-system]
requires = ["poetry>=1.1.3"]
build-backend = "poetry.masonry.api"
